--- a/newtonraphson.ipynb
+++ b/newtonraphson.ipynb
@@ -6,7 +6,7 @@
       "name": "newtonraphson.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM4eZVGK53AqbQ/c0s+lU4m",
+      "authorship_tag": "ABX9TyMr3d+iMGQUrzYHeqtVsj1g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,12 +36,12 @@
       "metadata": {
         "id": "VMMUO4_xlf1Q"
       },
-      "execution_count": 87,
+      "execution_count": 180,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 181,
       "metadata": {
         "id": "c0j9ZyhVc2s1"
       },
@@ -60,19 +60,36 @@
       "metadata": {
         "id": "ShUi81P9dgjU"
       },
-      "execution_count": 89,
+      "execution_count": 182,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def valor_inicial(grado : float, coeficiente_mayor_grado: float, coeficiente_independiente :float) :\n",
-        "    return (coeficiente_independiente/coeficiente_mayor_grado) ** (1/grado)"
+        "def raiz_cubica(x):\n",
+        "    if x < 0:\n",
+        "        x = abs(x)\n",
+        "        raiz = x**(1/3)*(-1)\n",
+        "    else:\n",
+        "        raiz = x**(1/3)\n",
+        "    return raiz"
+      ],
+      "metadata": {
+        "id": "YJqKF4u9vtqC"
+      },
+      "execution_count": 183,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def valor_inicial(grado : float, coeficiente_mayor_grado: float, coeficiente_independiente :float) -> float : \n",
+        "    return raiz_cubica(-coeficiente_independiente/coeficiente_mayor_grado)"
       ],
       "metadata": {
         "id": "ckonjVQuiPZy"
       },
-      "execution_count": 90,
+      "execution_count": 184,
       "outputs": []
     },
     {
@@ -85,12 +102,12 @@
         "       raiz1 = ( -a1 - math.sqrt(discriminante) ) / 2*a2\n",
         "       return (raiz2,raiz1)\n",
         "     else :\n",
-        "       return (math.nan,math.nan)"
+        "       return (complex(-a1/2,math.sqrt(abs(discriminante))/2),complex(-a1/2,-math.sqrt(abs(discriminante))/2))"
       ],
       "metadata": {
         "id": "twxYnosQjIz6"
       },
-      "execution_count": 91,
+      "execution_count": 185,
       "outputs": []
     },
     {
@@ -106,22 +123,57 @@
       "metadata": {
         "id": "YwhGB2rnoih1"
       },
-      "execution_count": 92,
+      "execution_count": 186,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "A=1\n",
-        "B=0\n",
-        "C=-7\n",
-        "D=6"
+        "B=-5\n",
+        "C=2\n",
+        "D=-7"
       ],
       "metadata": {
         "id": "Gv3qg4y8dpSq"
       },
-      "execution_count": 93,
+      "execution_count": 187,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "PzOMjBWOw2bX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pow(-D/A,0.3333)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BAxY663BuYqw",
+        "outputId": "e8ebcf8d-a575-4cb7-9017-e458cc98c86d"
+      },
+      "execution_count": 188,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.9128071070563357"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 188
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -147,20 +199,39 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BFPf7lXYeJ7Q",
-        "outputId": "36272b80-9e30-485e-f0f2-e86e23b8f9b9"
+        "outputId": "9f14ab1b-56d5-4e1b-c2ec-246800e606df"
       },
-      "execution_count": 94,
+      "execution_count": 189,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "#iteracion: 1  x : 1.8171205928321397 f(x): -0.7198441498249775\n",
-            "#iteracion: 2  x : 2.064848816277164 f(x): 0.34974900842099466\n",
-            "#iteracion: 3  x : 2.004451480238871 f(x): 0.022376383461347515\n",
-            "#iteracion: 4  x : 2.0000235620882694 f(x): 0.00011781377239294955\n",
-            "#iteracion: 5  x : 2.000000000666174 f(x): 3.3308680258414824e-09\n",
-            "#iteracion: 6  x : 2.0 f(x): 0.0\n"
+            "#iteracion: 1  x : 1.912931182772389 f(x): -14.470666184570078\n",
+            "#iteracion: 2  x : -0.4394891862354007 f(x): -8.929619760220834\n",
+            "#iteracion: 3  x : 0.8408634370755528 f(x): -8.258996121936782\n",
+            "#iteracion: 4  x : -1.0854418353924722 f(x): -16.340653740418063\n",
+            "#iteracion: 5  x : -0.08838994907613773 f(x): -7.216534385140833\n",
+            "#iteracion: 6  x : 2.3937895505742173 f(x): -17.14660206494481\n",
+            "#iteracion: 7  x : -1.2181427413201398 f(x): -18.663211760771127\n",
+            "#iteracion: 8  x : -0.21652362127198788 f(x): -7.6776107994215606\n",
+            "#iteracion: 9  x : 1.566527530662397 f(x): -12.292715577789355\n",
+            "#iteracion: 10  x : -0.38369116290181515 f(x): -8.559963462447627\n",
+            "#iteracion: 11  x : 0.9796711482424054 f(x): -8.899190666785874\n",
+            "#iteracion: 12  x : -0.8300473167891649 f(x): -12.676872169305872\n",
+            "#iteracion: 13  x : 0.19497517270611353 f(x): -6.792714201259642\n",
+            "#iteracion: 14  x : 41.53978887262795 f(x): 63127.460603196065\n",
+            "#iteracion: 15  x : 28.28680588458665 f(x): 18682.357348220117\n",
+            "#iteracion: 16  x : 19.472552541782406 f(x): 5519.651955714876\n",
+            "#iteracion: 17  x : 13.6305096829092 f(x): 1623.7302678413735\n",
+            "#iteracion: 18  x : 9.792514351505181 f(x): 472.1552240440923\n",
+            "#iteracion: 19  x : 7.330228893825209 f(x): 132.86891240075707\n",
+            "#iteracion: 20  x : 5.852174675121721 f(x): 33.8895836755757\n",
+            "#iteracion: 21  x : 5.118984604765211 f(x): 6.355842195420895\n",
+            "#iteracion: 22  x : 4.902962351167754 f(x): 0.4732327983121305\n",
+            "#iteracion: 23  x : 4.88409905769843 f(x): 0.0034479414689521093\n",
+            "#iteracion: 24  x : 4.883959590730352 f(x): 1.8774445287306207e-07\n",
+            "#iteracion: 25  x : 4.883959583135384 f(x): -3.552713678800501e-15\n"
           ]
         }
       ]
@@ -184,15 +255,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MoRyD_EfhMFJ",
-        "outputId": "d0f9330f-d502-45e9-a12a-130c39bbc245"
+        "outputId": "2b4bb06a-08d6-4a71-fa80-431815b268d3"
       },
-      "execution_count": 95,
+      "execution_count": 190,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "La raiz de la ecuacion es  2.0\n"
+            "La raiz de la ecuacion es  4.883959583135384\n"
           ]
         }
       ]
@@ -205,7 +276,7 @@
       "metadata": {
         "id": "jMwdWwHKpS6D"
       },
-      "execution_count": 96,
+      "execution_count": 191,
       "outputs": []
     },
     {
@@ -218,15 +289,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mPRykTWKp4GV",
-        "outputId": "f6e0f98f-a00a-42fb-c3f1-f94f9fe19c20"
+        "outputId": "07f897b3-f79f-47b8-840d-1a9d7c6beee0"
       },
-      "execution_count": 97,
+      "execution_count": 192,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 2.0 -3.0 0.0\n"
+            "1 -0.11604041686461564 1.4332632940230354 -7.993605777301127e-15\n"
           ]
         }
       ]
@@ -239,7 +310,7 @@
       "metadata": {
         "id": "f8zE2NgZoT3R"
       },
-      "execution_count": 103,
+      "execution_count": 193,
       "outputs": []
     },
     {
@@ -252,15 +323,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cadbvJnzqJN1",
-        "outputId": "c49cbb88-a6fc-4e48-e992-c49199a47560"
+        "outputId": "6926b5a1-1eec-436d-f4c3-b17d422c17e2"
       },
-      "execution_count": 104,
+      "execution_count": 194,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Raices de la ecuacion son : 2.0 1.0 -3.0\n"
+            "Raices de la ecuacion son : 4.883959583135384 (0.05802020843230782+1.1957829859286788j) (0.05802020843230782-1.1957829859286788j)\n"
           ]
         }
       ]
